compiler/kernc_cli/tests/soundness/run-pass/consteval/check_intrinsic_preserves_typed_value_and_source.rn
// class: consteval-expression-capture
// source: @check must preserve the typed value while exposing expression source text
// exit: 0

const GLOBAL = @check(usize.{40} + usize.{2});

fn id[T](value: T) T {
    return value;
}

fn len[N: usize](source: [N]u8) usize {
    return #source;
}

fn main() i32 {
    if (GLOBAL.value != usize.{42}) {
        return 1;
    }
    if (GLOBAL.source != "usize.{40} + usize.{2}") {
        return 2;
    }

    let captured = @check(id[usize](usize.{7}));
    if (captured.value != usize.{7}) {
        return 3;
    }
    if (captured.source != "id[usize](usize.{7})") {
        return 4;
    }
    if (len(captured.source) != #captured.source) {
        return 5;
    }

    let explicit = @check[u64](7);
    if (explicit.value != u64.{7}) {
        return 6;
    }
    if (explicit.source != "7") {
        return 7;
    }

    return 0;
}
